miners: Detect locale changes only when the miner could be constructed

https://bugzilla.gnome.org/show_bug.cgi?id=742391